--- a/index.html
+++ b/index.html
@@ -1,1 +1,55 @@
-<p>保存finetune图像</p>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8" />
+  <title>Auto Image Listing</title>
+</head>
+<body>
+  <h1>Images in exp1 folder</h1>
+  <div id="image-container"></div>
+
+  <script>
+    // 根据实际情况修改
+    const username = "xianzaren";  // 你的 GitHub 用户名
+    const repo = "xianzaren233.github.io";        // 仓库名
+    const folderPath = "exp1";    // 文件夹路径
+
+    async function loadImages() {
+      try {
+        // 调用 GitHub 的仓库内容 API
+        const apiUrl = `https://api.github.com/repos/${username}/${repo}/contents/${folderPath}`;
+        const response = await fetch(apiUrl);
+
+        if (!response.ok) {
+          throw new Error("Network response was not ok");
+        }
+
+        // data 会是一个数组，包含文件或文件夹的相关信息
+        const data = await response.json();
+        const container = document.getElementById("image-container");
+
+        // 遍历文件列表，只处理图片文件
+        data.forEach(item => {
+          // 检测文件扩展名
+          if (
+            item.type === "file" &&
+            /\.(png|jpe?g|gif|webp|bmp|svg)$/i.test(item.name)
+          ) {
+            // 创建 <img> 元素
+            const img = document.createElement("img");
+            img.src = item.download_url;  // GitHub 提供的可直接访问的下载地址
+            img.alt = item.name;
+            img.style.maxWidth = "300px";
+            img.style.margin = "10px";
+            container.appendChild(img);
+          }
+        });
+      } catch (error) {
+        console.error("Error fetching images:", error);
+      }
+    }
+
+    loadImages();
+  </script>
+</body>
+</html>
